fix overflow text event label

--- a/css/simple-scheduler.css
+++ b/css/simple-scheduler.css
@@ -27,6 +27,9 @@
 }
 .sscheduler .event-draw{
     padding: 5px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .sscheduler-droppable{
